# neuron-chess

./: .gitignore  .gitmodules  README.md  chess.ipynb  download_files.py  get-data.py  process_pgns.py  pyproject.toml  script.py
src/: consts.py  data_loader.py  get-data.py  loss.py  model.py  process_pgns.py  results.py  run_tests.py  train.py  visualization.ipynb
